--- a/index.html
+++ b/index.html
@@ -4,9 +4,84 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Számkitaláló</title>
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
         <link rel="stylesheet" href="./styles.css" />
     </head>
     <body>
+        <header>
+            <nav class="navbar bg-body-tertiary" data-bs-theme="dark">
+                <div class="container-fluid">
+                    <span class="navbar-brand mb-0 h1">Számkitaláló játék</span>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <form class="mt-3 mb-2">
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="mb-3 col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
+                            <label for="numberInput" class="form-label">Tipp</label>
+                            <input
+                                type="number"
+                                class="form-control"
+                                id="numberInput"
+                                aria-describedby="emailHelp"
+                                min="1"
+                                max="100"
+                                step="1"
+                                name="guess"
+                            />
+                            <div id="emailHelp" class="form-text">Adj meg egy egész számot 1 és 100 között.</div>
+                        </div>
+                        <div
+                            class="mb-3 form-check col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4"
+                        >
+                            <button type="submit" class="btn btn-success">Tipp beküldése</button>
+                            <button class="btn btn-warning">Új játék</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <div class="container-fluid mt-2 mb-5">
+                <div class="row">
+                    <div
+                        class="col col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 alert alert-success"
+                        role="alert"
+                    >
+                        44 - gratulálok, eltaláltad!
+                    </div>
+                </div>
+                <div class="row">
+                    <div
+                        class="col col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 alert alert-warning"
+                        role="alert"
+                    >
+                        65 - a keresett szám kisebb
+                    </div>
+                </div>
+                <div class="row">
+                    <div
+                        class="col col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 alert alert-primary"
+                        role="alert"
+                    >
+                        25 - a keresett szám nagyobb
+                    </div>
+                </div>
+            </div>
+        </main>
+        <footer class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4">
+            Számkitaláló játék
+        </footer>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"
+        ></script>
         <script src="./szamkitalalo.js"></script>
     </body>
 </html>
