--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                             <label for="numberInput" class="form-label">Tipp</label>
                             <input
                                 type="number"
-                                class="form-control"
+                                class="form-control js-guess-field"
                                 id="numberInput"
                                 aria-describedby="emailHelp"
                                 min="1"
@@ -42,12 +42,12 @@
                             class="mb-3 form-check col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4"
                         >
                             <button type="submit" class="btn btn-success">Tipp beküldése</button>
-                            <button class="btn btn-warning">Új játék</button>
+                            <button class="btn btn-warning js-new-game-button">Új játék</button>
                         </div>
                     </div>
                 </div>
             </form>
-            <div class="container-fluid mt-2 mb-5">
+            <div class="container-fluid mt-2 mb-5 js-guess-container">
                 <div class="row">
                     <div
                         class="col col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4 alert alert-success"
