--- a/index.html
+++ b/index.html
@@ -34,14 +34,16 @@
                                 min="1"
                                 max="100"
                                 step="1"
+                                required
                                 name="guess"
                             />
+                            <div class="invalid-feedback">Adj meg egy helyes tippet.</div>
                             <div id="emailHelp" class="form-text">Adj meg egy egész számot 1 és 100 között.</div>
                         </div>
                         <div
                             class="mb-3 form-check col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 col-xl-4 offset-xl-4"
                         >
-                            <button type="submit" class="btn btn-success">Tipp beküldése</button>
+                            <button type="submit" class="btn btn-success js-submit-guess">Tipp beküldése</button>
                             <button class="btn btn-warning js-new-game-button">Új játék</button>
                         </div>
                     </div>
